syntax = "proto3";

package savedevent;

option go_package = "proto/savedevent";

message SavedEvent {
  string user_id = 1;
  int32 event_id = 2;
  string created_at = 3;
}

message SaveEventRequest {
  string user_id = 1;
  int32 event_id = 2;
}

message SaveEventResponse {
  SavedEvent saved_event = 1;
}

message FindSavedEventRequest {
  string user_id = 1;
  int32 event_id = 2;
}

message FindSavedEventResponse {
  SavedEvent saved_event = 1;
}

message FindAllByUserRequest {
  string user_id = 1;
}

message FindAllByUserResponse {
  repeated SavedEvent saved_events = 1;
}

message FindAllByEventRequest {
  int32 event_id = 1;
}

message FindAllByEventResponse {
  repeated SavedEvent saved_events = 1;
}

message DeleteSavedEventRequest {
  string user_id = 1;
  int32 event_id = 2;
}

message DeleteSavedEventResponse {
  string message = 1;
}

service SavedEventService {
  rpc SaveEvent(SaveEventRequest) returns (SaveEventResponse);
  rpc FindSavedEvent(FindSavedEventRequest) returns (FindSavedEventResponse);
  rpc FindAllByUser(FindAllByUserRequest) returns (FindAllByUserResponse);
  rpc FindAllByEvent(FindAllByEventRequest) returns (FindAllByEventResponse);
  rpc DeleteSavedEvent(DeleteSavedEventRequest) returns (DeleteSavedEventResponse);
}